use subselects to optimise slow query